--- a/package.json
+++ b/package.json
@@ -4,10 +4,17 @@
   "main": "index.js",
   "author": "Willian Lemes",
   "license": "MIT",
+  "scripts": {
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js"
+  },
   "dependencies": {
     "express": "^4.17.1",
     "mongoose": "^5.9.25",
     "morgan": "^1.10.0",
     "multer": "^1.4.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
